--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-image-gallery": "^1.2.7"
+    "react-image-gallery": "^1.2.7",
+    "react-scroll": "^1.8.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
